<resources>
    <string name="app_name">MoodnitoringApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visual_tv_title">VIsualizacion de datos</string>
    <string name="visual_button_week">Ult. semana</string>
    <string name="visual_button_two_weeks">Ult. 2 semanas</string>
    <string name="visual_button_month">Ult. mes</string>
    <string name="visual_button_select_date">Otra fecha</string>
    <string name="checkbox_horas_son">Horas de sueño</string>
    <string name="checkbox_horas_ea">Estado de ánimo</string>
    <string name="checkbox_horas_actividades">Actividades</string>
</resources>