<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/common_padding_default">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/visual_tv_title"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/common_padding_default"
        />
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_min"
        app:singleSelection="true"
        app:checkedButton="@+id/btnOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"

        >
        <Button
            android:layout_marginEnd="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visual_button_week"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:layout_marginEnd="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visual_button_two_weeks"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:layout_marginEnd="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visual_button_month"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual_button_select_date"
        app:layout_constraintTop_toBottomOf="@+id/toggle_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:id="@+id/fLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOther"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        >
        <ImageView
            android:id="@+id/ivBackground"
            android:src="@drawable/background"
            android:layout_margin="@dimen/common_padding_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lcMainChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_padding_default"
            app:layout_constraintTop_toBottomOf="@+id/btnOther"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbHorasSon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="@dimen/common_padding_min"
            android:text="@string/checkbox_horas_son"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbEstadoAnimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="@dimen/common_padding_min"
            android:text="@string/checkbox_horas_ea"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbActividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="@dimen/common_padding_min"
            android:text="@string/checkbox_horas_actividades"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>